--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -15,6 +15,7 @@
             android:id="@+id/GridLayout1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:rowCount="8"
             tools:context=".DisplayActivityMessage">
 
