Added input filters

--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -7,6 +7,7 @@
     android:fillViewport="true"
     android:scrollbarStyle="insideOverlay"
     android:scrollbars="horizontal"
+    android:maxLength="2"
     android:visibility="visible">
 
 
