--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ScrollView01"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clipToPadding="false"
-    android:fillViewport="true"
-    android:scrollbarStyle="insideOverlay"
-    android:scrollbars="horizontal"
-    android:visibility="visible">
-
-
+    android:layout_height="match_parent"
+    android:id="@+id/relative"
+    tools:context=".DisplayActivityMessage">
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/GridLayout1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:rowCount="8"
-            tools:context=".DisplayActivityMessage">
+            android:singleLine="true">
 
         </GridLayout>
-</HorizontalScrollView>
+        </HorizontalScrollView>
+</RelativeLayout>
