Added super menu and made Feast of Odin Submenus

--- a/app/src/main/res/layout-land/scythe_main_menu.xml
+++ b/app/src/main/res/layout-land/scythe_main_menu.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,19 +13,16 @@
         android:singleLine="true"
         android:text="@string/scytheCalculator"
         android:textSize="24sp"
-        tools:context=".MainActivity" />
+        tools:context="ScytheScoreCalculator.ScytheMainMenu" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="204dp"
+        android:layout_centerInParent="true"
         android:ems="10"
         android:hint="No. of Players"
         android:inputType="number"
-        android:maxLength="1"
         android:singleLine="true" />
 
     <Button
@@ -34,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="197dp"
+        android:layout_marginBottom="51dp"
         android:onClick="sendMessage"
         android:text="Next"
         tools:text="Next" />
